--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
 	"keywords": [],
 	"description": "",
 	"dependencies": {
+		"body-parser": "^1.20.0",
 		"express": "^4.18.1",
-		"mysql": "^2.18.1"
+		"mysql": "^2.18.1",
+		"request": "^2.88.2"
 	}
 }
